# codedead_api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: config.rs  errors.rs  main.rs  repository.rs  services.rs
src/component/: env_reader.rs
src/config/: open_api.rs  server_config.rs
src/errors/: internal_server_error.rs
src/repository/: application.rs
src/repository/application/: dao.rs
src/repository/application/dao/: application_repository.rs
src/repository/application/model/: application.rs
src/repository/v2/: dao.rs
src/repository/v2/dao/: version_repository.rs
src/repository/v2/model/: version.rs
src/services/: application.rs  version.rs
src/services/application/: application_service.rs
src/services/version/: version_service.rs
src/web/: controller.rs
src/web/controller/: actuator_controller.rs  application_controller.rs  version_controller.rs
src/web/dto/: application.rs  version.rs
src/web/dto/application/: application_dto.rs  applications_query.rs
src/web/dto/version/: version_dto.rs
