[package]
name = "codedead_api"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = "0.4.40"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
mongodb = "3.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
