[package]
name = "codedead_api"
description = "CodeDead API"
readme = "README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
mongodb = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
